[package]
name = "entity_component"
version = "0.99.0"
authors = ["Joël Lupien (Jojolepro) <jojolepro@jojolepro.com>"]
edition = "2018"
description = "Provides the Entity and Component part of a full ECS."
keywords = ["game", "ecs"]
categories = ["game-engines"]
license = "AGPL-3.0-only"
exclude = ["doc"]
repository = "https://git.jojolepro.com/entity_component/"

[features]
default = ["keysize16"]

# Allows for 2^16 entities
keysize16 = []
# Allows for 2^20 entities
keysize20 = []
# Allows for 2^24 entities
keysize24 = []
# Allows for 2^32 entities
keysize32 = []

ser = ["serde"]

[dependencies]
bitset-core = "0.1.0"
itertools = "0.9.0"
paste = "1.0.1"
serde = { version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false

