[package]
name = "entity_component"
version = "1.0.1"
authors = ["Joël Lupien (Jojolepro) <jojolepro@jojolepro.com>"]
edition = "2018"
description = "Provides the Entity and Component part of a full ECS."
keywords = ["game", "ecs"]
categories = ["game-engines"]
license = "CC0-1.0"
exclude = ["doc"]
repository = "https://github.com/jojolepro/entity_component/"

[features]
default = ["keysize16"]

# Allows for 2^16 entities
keysize16 = []
# Allows for 2^20 entities
keysize20 = []
# Allows for 2^24 entities
keysize24 = []
# Allows for 2^32 entities
keysize32 = []

ser = ["serde"]

[dependencies]
bitset-core = "0.1.0"
itertools = "0.9.0"
serde = { version = "1.0", features = ["derive"], optional = true}
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false

